<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        android:text="@string/NomePessoa"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lblAlt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        android:text="@string/AlturaPessoa"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtAlt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lblPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        android:text="@string/PesoPessoa"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lblNasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        android:text="@string/NascPessoa"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtNasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lblSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        android:text="@string/SexoPessoa"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />
</LinearLayout>
